k8s-project/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: monster-service
spec:
  selector:
    app: monster
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
