k8s-project/manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monster-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: monster.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: monster-service   
                port:
                  number: 80
